# ai-agents-development-course

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SYSTEM_INSTRUCTIONS.md  main.py  pyproject.toml
agents/adk_agent/: .env  agent.py
docs/syllabus/: main.md  week_0.md  week_1.md
scripts/: check_idempotency_mcp.py  run_malformed.py  run_smoke.py
shared/: logging.py
tests/: test_add_schemas.py  test_create_event.py  test_create_event_idempotency.py  test_create_event_schemas.py
tools/mcp_server/: app.py  mcp_stdio.py
tools/mcp_server/schemas/: add.json  create_event.json
